--- a/.html
+++ b/.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Post aleatorio Amp dompi</title>
+<title>Post aleatorio Amp drom</title>
 <meta content='width=device-width, initial-scale=1' name='viewport'>
 <script>
   /*! jQuery v1.7.2 jquery.com | jquery.org/license */
@@ -33,26 +33,38 @@ body{background:#fff;color:#111;font-size:14px;font-weight:300;line-height:22px;
 .related-post-style-3{margin:0;padding:0 22px}
 .related-post-style-3 li{margin:0;padding:0;list-style:none;overflow-wrap:break-word;overflow:hidden;}
 .related-post-style-3 .related-post-item{text-decoration:none;display:block;float:left;width:100%;height:230px;padding:0;margin:5px;font-size:16px;font-weight:300;position:relative;text-align:center;}
-.related-post-style-3 .related-post-item-thumbnail{display:block;margin:0 0 10px;width:100%;height:250px;max-width:none;max-height:none;background-color:transparent;border:none;padding:0;border-radius:0;box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);}
+.related-post-style-3 .related-post-item-thumbnail{display:block;margin:0 0 10px;width:100%;height:200px;max-width:none;max-height:none;background-color:transparent;border:none;padding:0;border-radius:0;box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);}
 @media screen and (max-width:1024px){
 .related-post{margin:0 0 0 -2px;}
-.related-post-style-3 .related-post-item{height:123px;padding-left:2px!important;margin:0 0 2px!important;}
+.related-post-style-3 .related-post-item{height:230px;padding-left:2px!important;margin:0 0 2px!important;}
 .related-post-style-3 .related-post-item-thumbnail{height:200px;height:200px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:12px;}
 }
 @media screen and (max-width:800px){
 #related-post{margin:0 0 0 -4px;display:block}
-.related-post-style-3 .related-post-item{width:100%;height:210px;padding-left:4px!important;margin:0 0 4px!important;}
-.related-post-style-3 .related-post-item-thumbnail{height:210px;}
+.related-post-style-3 .related-post-item{width:100%;height:230px;padding-left:4px!important;margin:0 0 4px!important;}
+.related-post-style-3 .related-post-item-thumbnail{height:200px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:15px;font-weight:300}
 }
 @media screen and (max-width:603px){
 .related-post{margin:0 0 0 -2px;}
-.related-post-style-3 .related-post-item{height:210px;padding-left:2px!important;margin:0 0 2px!important;}
+.related-post-style-3 .related-post-item{height:230px;padding-left:2px!important;margin:0 0 2px!important;}
 .related-post-style-3 .related-post-item-thumbnail{height:200px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:12px;}
 }
-@media screen and (max-width:320px){.related-post-style-2 .related-post-item-summary {display:none;}
+
+	@media screen and (max-width:480px){
+#related-post{margin:0 0 0 -4px;display:block}
+.related-post-style-3 .related-post-item{width:100%;height:230px;padding-left:4px!important;margin:0 0 4px!important;}
+.related-post-style-3 .related-post-item-thumbnail{height:200px;}
+.related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:15px;font-weight:300}
+}
+	
+@media screen and (max-width:310px){
+#related-post{margin:0 0 0 -4px;display:block}
+.related-post-style-3 .related-post-item{width:100%;height:230px;padding-left:4px!important;margin:0 0 4px!important;}
+.related-post-style-3 .related-post-item-thumbnail{height:200px;}
+.related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:15px;font-weight:300}	
 }
 </style>
 </head>
