--- a/.html
+++ b/.html
@@ -31,13 +31,16 @@ body{background:#fff;color:#111;font-size:14px;font-weight:300;line-height:22px;
     }
 .related-post a{color:#111;font-weight:600;;text-decoration:none;font-size:15px;text-align:center}
 .related-post a:hover{color:#f50}
-.related-post-style-3{margin:0;padding:0 22px}
+.related-post-style-3{
+	margin: 0;
+    padding: 0;
+	}
 	.related-post-style-3 ul{overflow:hidden;height: 695px !important;}
 	.related-post,.related-post-style-3 .related-post-item{-moz-box-sizing:border-box;-webkit-box-sizing:border-box}
 h4.title-related{font-size:20px;font-weight:700;margin:10px 0;padding-left:5px;text-align:left;z-index:2;color:#111}
 .related-post-style-3 li{margin:0;padding:0;list-style:none;overflow-wrap:break-word;overflow:hidden;}
 .related-post-style-3 .related-post-item{text-decoration:none;display:block;float:left;width:100%;height:230px;padding:0;margin:5px;font-size:16px;font-weight:300;position:relative;text-align:center;}
-.related-post-style-3 .related-post-item-thumbnail{display:block;margin:0 0 10px;width:100%;height:200px;max-width:none;max-height:none;background-color:transparent;border:none;padding:0;border-radius:0;box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);}
+.related-post-style-3 .related-post-item-thumbnail{display:block;margin:0 0 10px;width:100%;height:200px;max-width:none;max-height:none;background-color:transparent;border:none;padding:0;border-radius:0;}
 @media screen and (max-width:1024px){
 .related-post{margin:0 0 0 -2px;}
 .related-post-style-3 .related-post-item{height:230px;padding-left:2px!important;margin:0 0 2px!important;}
