--- a/.html
+++ b/.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Post aleatorio Amp drom</title>
+<title>Post aleatorio Amp dron</title>
 <meta content='width=device-width, initial-scale=1' name='viewport'>
 <script>
   /*! jQuery v1.7.2 jquery.com | jquery.org/license */
@@ -35,7 +35,8 @@ body{background:#fff;color:#111;font-size:14px;font-weight:300;line-height:22px;
 .related-post a:hover{color:#f50}
 .related-post-style-3{
 	margin: 0;
-    padding: 0;
+ padding-left: 0px;
+    padding-right: 15px;
 	}
 	.related-post-style-3 ul{overflow:hidden;height: 695px !important;}
 	.related-post,.related-post-style-3 .related-post-item{-moz-box-sizing:border-box;-webkit-box-sizing:border-box}
@@ -45,33 +46,33 @@ h4.title-related{font-size:20px;font-weight:700;margin:10px 0;padding-left:5px;t
 .related-post-style-3 .related-post-item-thumbnail{display:block;margin:0 0 10px;width:100%;height:170px;max-width:none;max-height:none;background-color:transparent;border:none;padding:0;border-radius:0;}
 @media screen and (max-width:1024px){
 .related-post{margin:0 0 0 -2px;}
-.related-post-style-3 .related-post-item{height:231px;padding-left:2px!important;margin:0 0 2px!important;}
+.related-post-style-3 .related-post-item{height:231px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);}
 .related-post-style-3 .related-post-item-thumbnail{height:170px;height:170px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:12px;}
 }
 @media screen and (max-width:800px){
 #related-post{margin:0 0 0 -4px;display:block}
-.related-post-style-3 .related-post-item{width:100%;height:231px;padding-left:4px!important;margin:0 0 4px!important;}
+.related-post-style-3 .related-post-item{width:100%;height:231px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);}
 .related-post-style-3 .related-post-item-thumbnail{height:170px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:15px;font-weight:300}
 }
 @media screen and (max-width:603px){
 .related-post{margin:0 0 0 -2px;}
-.related-post-style-3 .related-post-item{height:231px;padding-left:2px!important;margin:0 0 2px!important;}
+.related-post-style-3 .related-post-item{height:231px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);}
 .related-post-style-3 .related-post-item-thumbnail{height:170px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:12px;}
 }
 
 	@media screen and (max-width:480px){
 #related-post{margin:0 0 0 -4px;display:block}
-.related-post-style-3 .related-post-item{width:100%;height:231px;padding-left:4px!important;margin:0 0 4px!important;}
+.related-post-style-3 .related-post-item{width:100%;height:231px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);}
 .related-post-style-3 .related-post-item-thumbnail{height:170px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:15px;font-weight:300}
 }
 	
 @media screen and (max-width:310px){
 #related-post{margin:0 0 0 -4px;display:block}
-.related-post-style-3 .related-post-item{width:100%;height:231px;padding-left:4px!important;margin:0 0 4px!important;}
+.related-post-style-3 .related-post-item{width:100%;height:231px;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);}
 .related-post-style-3 .related-post-item-thumbnail{height:170px;}
 .related-post-style-3 .related-post-item-tooltip a.related-post-item-title{font-size:15px;font-weight:300}	
 }
